--- a/assets/css/first_article.css
+++ b/assets/css/first_article.css
@@ -20,31 +20,40 @@
 
 .first-article {
     display: flex;
-    justify-content: center;
-    align-items: center;
     background: #000000;
+    position: relative;
 }
 
 .title{
     font-size: 80px;
-    margin: 0;
     color: white;
     font-family: "InterBlack";
+    z-index: 1;
+    position: absolute; 
+    top: 30%; 
+    right: 700px;
+    margin-left: 50px;
+    transform: translateY(-50%);
+    text-align: center;
 }
 
 .description{
     margin-top: 10px;
     color: white;
     font-family: "InterRegular";
-}
-
-.welcome-text{
-    justify-content: center;
+    z-index: 1;
+    position: absolute; 
+    top: 350px; 
+    right: 880px;
+    transform: translateY(-50%);
     text-align: center;
-    margin-left: 50px;
-    margin-top: 80px;
 }
 
+body{
+    overflow-x: hidden;
+}
 
-
+.welcome-image{
+    margin-left: 500px;
+}
 
