--- a/assets/css/mobile_t.css
+++ b/assets/css/mobile_t.css
@@ -3,6 +3,7 @@
     .first-article {
         flex-direction: row; 
         align-items: center;
+        padding: 20px;
     }
 
     .welcome-text {
