att responsive mobile

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -20,7 +20,7 @@
 
 .footer{
     display: flex;
-    background: linear-gradient(#000000, #1f1f1f);
+    background: linear-gradient(#000000, #0b0b0b);
     color: white;
     font-family: "InterBlack";
     font-size: 20px;
