--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,16 +1,16 @@
 @media (max-width: 768px) {
     .first-article {
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
+        align-items: center !important;
+        justify-content: center !important;
+        text-align: center !important;
     }
 
     .title {
         font-size: 30px;
         position: static;
-        margin-top: 50px;
-        margin-right: 90px;
+        margin-top: 70px;
+        margin-right: 20%;
         justify-content: center;
         align-items: center;
         text-align: center;
@@ -29,15 +29,15 @@
     .form-mentoria {
         position: static;
         margin-top: 80px;
-        max-width: 50%;
-        margin-left: 20%;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
+        max-width: 60%;
+        margin-left: 18%;
+        justify-content: center !important;
+        align-items: center !important;
+        text-align: center ;
     }
 
     .welcome-image {
-        margin-left: -50px;
+        margin-left: -40px;
         width: 100%;
         margin-top: -50px;
     }
@@ -47,24 +47,28 @@
     .second-article {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: center !important;
+        justify-content: center !important;
+        text-align: center !important;
     }
 
     .benefits {
         order: 1;
         font-size: 18px;
-        margin-right: 10px ;
+        margin-right: 10% ;
     }
 
     .benefits-list {
         order: 2;
         font-size: 14px;
+        margin-right: 10%;
     }
 
     .benefits-image {
         order: 3;
         width: 100%;
         margin-top: 20px;
+        margin-right: 10%;
     }
 }
 
@@ -72,7 +76,9 @@
     .third-article {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: center !important;
+        justify-content: center !important;
+        text-align: center !important;
     }
 
     .third-flex {
@@ -82,15 +88,15 @@
 
     .tooth-image {
         order: 1;
-        width: 100%; /* Ajuste para caber na tela */
-        margin-left: -50px;
+        width: 150%; 
+        margin-left: 100px;
     }
 
     .tooth-text {
         order: 2;
-        font-size: 18px; /* Ajuste conforme necessário */
+        font-size: 18px; 
         position: static;
-        text-align: center; /* Centraliza o texto */
+        text-align: center; 
         padding: 10px;
         margin-right: 20%px;
         margin-top: 10%;
