--- a/assets/css/first_article.css
+++ b/assets/css/first_article.css
@@ -30,8 +30,8 @@
     font-family: "InterBlack";
     z-index: 1;
     position: absolute; 
-    margin-top: 250px; 
-    right: 700px;
+    margin-top: 200px; 
+    margin-right: 700px;
     margin-left: 50px;
     transform: translateY(-50%);
     text-align: center;
