--- a/assets/css/first_article.css
+++ b/assets/css/first_article.css
@@ -22,6 +22,7 @@
     display: flex;
     background: #000000;
     position: relative;
+    justify-content: space-between;
 }
 
 .title{
@@ -31,8 +32,7 @@
     z-index: 1;
     position: absolute; 
     margin-top: 200px; 
-    margin-right: 700px;
-    margin-left: 50px;
+    margin-right: 500px;
     transform: translateY(-50%);
     text-align: center;
 }
@@ -43,8 +43,8 @@
     font-family: "InterRegular";
     z-index: 1;
     position: absolute; 
-    top: 350px; 
-    right: 880px;
+    margin-top: 300px; 
+    margin-left: 300px;
     transform: translateY(-50%);
     text-align: center;
 }
