--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -23,8 +23,8 @@
     max-width: 400px; 
     z-index: 1;
     position: absolute; 
-    top: 460px; 
-    right: 870px;
+    margin-top: 400px; 
+    margin-left: 300px;
     transform: translateY(-50%);
     text-align: center;
 }
