--- a/assets/css/second_article.css
+++ b/assets/css/second_article.css
@@ -21,12 +21,16 @@
 .second-article {
     background: #000000;
     display: flex;
-    justify-content: center;
-    padding: 70px;
+    justify-content: center !important;
+    text-align: center !important;
+    align-items: center !important;
+    padding: 50px;
 }
 
 .benefits-text{
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .benefits{
@@ -45,4 +49,8 @@
 
 .benefits-list h3{
     margin-top: 20px;
+}
+
+.benefits-image{
+    margin-right: 20px;
 }
