--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -24,7 +24,7 @@
     z-index: 1;
     position: absolute; 
     margin-top: 400px; 
-    margin-left: 300px;
+    margin-left: 20%;
     transform: translateY(-50%);
     text-align: center;
 }
