--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -24,9 +24,11 @@
     z-index: 1;
     position: absolute; 
     margin-top: 400px; 
-    margin-left: 20%;
+    margin-left: 300px;
     transform: translateY(-50%);
-    text-align: center;
+    text-align: center !important;
+    align-items: center !important;
+    justify-content: center !important;
 }
 
 .form {
