--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,45 +1,10 @@
 @media (max-width: 768px) {
     .first-article {
+        display: flex;
         flex-direction: column;
-        align-items: center !important;
-        justify-content: center !important;
-        text-align: center !important;
-    }
-
-    .title {
-        font-size: 30px;
-        position: static;
-        margin-top: 70px;
-        margin-right: 20%;
         justify-content: center;
         align-items: center;
         text-align: center;
-    }
-
-    .description {
-        position: static;
-        margin-top: 5px;
-        font-size: 14px;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        margin-right: 25px;
-    }
-
-    .form-mentoria {
-        position: static;
-        margin-top: 80px;
-        max-width: 60%;
-        margin-left: 18%;
-        justify-content: center !important;
-        align-items: center !important;
-        text-align: center ;
-    }
-
-    .welcome-image {
-        margin-left: -40px;
-        width: 100%;
-        margin-top: -50px;
     }
 }
 
