--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -41,6 +41,38 @@
     }
 }
 
+@media (max-width: 768px) {
+    .second-article{
+        display: flex;
+        flex-direction: column;
+        position: relative;
+    }
+
+    .benefits-image{
+        width: 400px;
+        height: auto;
+        margin-left: 30px;
+        margin-top: 30px;
+    }
+
+    .benefits {
+        font-size: 20px;
+        position: static !important;
+        z-index: 1;
+        margin-left: -70px;
+        margin-right: -70px;
+    }
+
+    .benefits-list {
+        font-size: 16px;
+        position: static !important;
+        z-index: 1;
+        margin-left: -30px;
+        margin-right: -30px;
+    }
+
+}
+
 
 @media (max-width: 768px) {
     .footer {
