--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -56,7 +56,7 @@
     }
 
     .benefits {
-        font-size: 20px;
+        font-size: 22px;
         position: static !important;
         z-index: 1;
         margin-left: -70px;
@@ -70,7 +70,41 @@
         margin-left: -30px;
         margin-right: -30px;
     }
+}
 
+@media (max-width: 768px) {
+    .third-article {
+        display: flex !important;
+        flex-direction: column !important;
+        position: relative !important;
+    }
+
+    .tooth-image {
+        width: 1200px;
+        margin-bottom: 300px;
+    }
+
+    .tooth-text {
+        margin-left: -650px;
+        font-size: 22px;
+        margin-right: 250px;
+        text-align: center;
+        margin-top: 500px;
+        text-align: center !important;
+        align-items: center !important;
+        justify-content: center !important;
+    }
+
+    .protes-image {
+        width: 300px;
+        height: 225px;
+        margin-left: 40px;
+        margin-top: 750px;
+        text-align: center !important;
+        align-items: center !important;
+        justify-content: center !important;
+    }
+    
 }
 
 
