--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -9,11 +9,11 @@
     }
 
     .title {
-        font-size: 30px;
+        font-size: 24px;
         z-index: 1;
         position: static !important;
-        margin-right: 200px;
-        margin-left: 200px;
+        margin-right: 250px;
+        margin-left: 250px;
         text-align: center !important;
         margin-top: 50px;
     }
@@ -22,10 +22,12 @@
         margin-top: 10px;
         z-index: 1;
         position: static !important; 
-        margin-left: 10px;
+        margin-left: 80px;
+        margin-right: 80px;
         text-align: center !important;
         align-items: center !important;
         justify-content: center !important;
+        font-size: 12px;
     }
 
     .welcome-text .form-mentoria {
@@ -50,26 +52,31 @@
     }
 
     .benefits-image{
-        width: 400px;
+        width: 300px;
         height: auto;
         margin-left: 30px;
         margin-top: 30px;
     }
 
     .benefits {
-        font-size: 20px;
+        font-size: 12px;
         position: static !important;
         z-index: 1;
-        margin-left: -70px;
-        margin-right: -70px;
+        margin-right: 30px;
+        margin-left: 30px;
+        text-align: center !important;
+        align-items: center !important;
+        justify-content: center !important;
+        margin-top: -100px;
     }
 
     .benefits-list {
-        font-size: 16px;
+        font-size: 10px;
         position: static !important;
         z-index: 1;
         margin-left: -30px;
         margin-right: -30px;
+        margin-top: -5px;
     }
 }
 
@@ -81,14 +88,14 @@
     }
 
     .tooth-image {
-        width: 1200px;
-        margin-bottom: 300px;
+        width: 500px;
+        margin-bottom: 400px;
     }
 
     .tooth-text {
-        margin-left: -650px;
-        font-size: 20px;
-        margin-right: 250px;
+        margin-left: -580px;
+        font-size: 12px;
+        margin-right: 320px;
         text-align: center;
         margin-top: 500px;
         text-align: center !important;
@@ -97,9 +104,9 @@
     }
 
     .protes-image {
-        width: 300px;
-        height: 225px;
-        margin-left: 40px;
+        width: 275px;
+        height: 200px;
+        margin-left: 60px;
         margin-top: 750px;
         text-align: center !important;
         align-items: center !important;
