--- a/assets/css/mobile_t.css
+++ b/assets/css/mobile_t.css
@@ -1,85 +1,80 @@
 /* Primeiro Article */
 @media screen and (min-width: 769px) and (max-width: 1200px) {
-    .first-article {
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-    }
-
     .welcome-image {
-        width: 70%; 
-        margin-top: 30px; 
-    }
-
-    .title {
-        font-size: 30px; 
-        text-align: center; 
-        margin-bottom: 20px; 
+        width: 100%;
+        margin-left: 0; 
     }
 
     .description {
-        font-size: 25px; 
-        text-align: center; 
-        margin-bottom: 20px; 
+        margin-left: 150px;
+        margin-right: -100px;
+        font-size: 18px;
     }
-
+    
     .form-mentoria {
-        margin-bottom: 20px; 
         width: 100%; 
+        margin-left: 130px !important;
     }
-}
-
-/* Segundo Article */
-@media screen and (min-width: 769px) and (max-width: 1200px) {
-    .second-article {
-        padding: 20px; /* Reduzindo o padding para economizar espaço */
-    }
-
-    .benefits-text {
-        text-align: center; /* Centralizando o texto */
+    
+    /* Segundo Article */
+    .benefits-image {
+        width: 60%; 
+        margin: 0 auto;
     }
 
     .benefits {
-        font-size: 20px; 
-        margin-bottom: 10px; /* Espaçamento abaixo do texto */
+        font-size: 18px; 
+        margin-left: -100px;
+        margin-right: -50px;
+        z-index: 1;
     }
-
+    
     .benefits-list {
         font-size: 16px; 
-        text-align: center; /* Centralizando o texto */
-        margin-bottom: 10px; /* Espaçamento abaixo da lista */
+        margin-left: -100px;
+        margin-right: -50px;
+        z-index: 1;
+        margin-top: -5px;
     }
 
-    .benefits-image {
-        width: 50%; 
-        margin: 20px auto; /* Centralizando a imagem e adicionando espaçamento */
+    /* Terceiro Article */
+    .tooth-image {
+        width: 80%; 
+        margin-bottom: 200px; 
+        margin-left: -20px; 
+    }
+    
+    .tooth-text {
+        font-size: 20px; 
+        text-align: center; 
+        margin-left: -200px;
+    }
+    
+    .protes-image {
+        width: 50%;
+        height: 30%;
+        margin-left: 420px;
+    }
+
+    /* Footer */
+    .footer {
+        flex-direction: column;
+        align-items: center; 
+        padding: 20px 0; 
+    }
+
+    .social-icons {
+        margin-top: 20px;
     }
 }
 
-/* Terceiro Article */
+
 @media screen and (min-width: 769px) and (max-width: 1200px) {
-    .third-article {
-        padding: 20px; /* Reduzindo o padding para economizar espaço */
-    }
-
-    .third-flex {
-        flex-direction: column-reverse; /* Invertendo a ordem dos elementos */
-        align-items: center; /* Centralizando os elementos */
-    }
-
-    .tooth-text {
-        font-size: 25px; 
-        text-align: center; /* Centralizando o texto */
-        margin-bottom: 20px; /* Espaçamento abaixo do texto */
-    }
-
-    .tooth-image {
-        width: 50%; 
-        margin: 20px auto; /* Centralizando a imagem e adicionando espaçamento */
-    }
-
-    .protes-image {
-        width: 50%; 
-        margin: 20px auto; /* Centralizando a imagem e adicionando espaçamento */
+    body {
+        background-color: black;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        position: relative
     }
 }
