--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -30,13 +30,18 @@ button {
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 10px 20px;
+    padding: 20px 20px;
     cursor: pointer;
+    font-size: 20px;
     transition: background-color 0.3s ease;
     font-family: "InterBold";
     text-transform: uppercase;
+    border: rgb(109, 76, 9) solid 5px;
+    box-shadow: 5px 5px rgb(19, 19, 19);
+    margin-top: 10px;
 }
 
 button:hover {
     background-color: rgb(109, 76, 9);
+    transform: scale(110%);
 }
