--- a/assets/css/success.css
+++ b/assets/css/success.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: InterBold;
-    src: url(../fonts/static/Inter-Bold.ttf);
+    font-family: Citrus;
+    src: url(../fonts/FontsFree-Net-c2537321-918e-4def-a018-cba7bcc0779d.ttf);
 }
 
 body {
@@ -16,7 +16,7 @@ body {
     font-size: 50px;
     position: relative;
     z-index: 1;
-    font-family: "InterBold";
+    font-family: "Citrus";
     margin-left: 20px;
     text-align: center;
 }
@@ -48,11 +48,11 @@ body {
         font-size: 30px;
         position: static !important;
         z-index: 1;
-        font-family: "InterBold";
-        margin-left: 100px;
-        margin-right: 100px;
+        font-family: "Citrus";
+        margin-left: 50px;
+        margin-right: 50px;
         text-align: center;
-        margin-top: 100px !important;
+        margin-top: 400px !important;
     }
 
     .image {
@@ -75,7 +75,7 @@ body {
         font-size: 50px;
         position: relative;
         z-index: 1;
-        font-family: "InterBold";
+        font-family: "Citrus";
         margin-left: 100px;
         text-align: center;
         margin-top: 100px;
